@startuml
class FinalWordProperties {
- UserDetailsOnWords userDetailsOnWords
- WordProperties wordProperties
+ UserDetailsOnWords getUserDetailsOnWords()
+ WordProperties getWordProperties()
}


class WordButton {
- DBManager dbManager
- ImageButton imageButton
- ImageButton playAudioImgButton
- FinalWordProperties finalWordProperties
+ void setVisibility(int)
+ void setDbManager(DBManager)
+ void afterAddingToLayout()
- void addButtons()
- void add_volume_img_display(RelativeLayout)
- void addMarked(RelativeLayout)
+ FinalWordProperties getFinalWordProperties()
}


class TextProgressBar {
- String text
- Paint textPaint
- void init()
+ void setText(String)
# void onDraw(Canvas)
}


class LockableScrollView {
- boolean scrollable
+ boolean onInterceptTouchEvent(MotionEvent)
+ boolean onTouchEvent(MotionEvent)
+ void setScrollingEnabled(boolean)
}


class StatisticsButton {
~ Context context
~ AfterAnswerQuestionDetails wordProperties
+ boolean performClick()
- void putStars2()
}


class SeacrhWordInDbActivity {
- DBManager dbManager
- FinalWordProperties[] words
- String currRegexToSearch
- int currAmount
# void onCreate(Bundle)
- void addTextWatcher()
- void afterTextChanges()
- void createButtons(FinalWordProperties[])
- void setListenerToMoreResultsButton(Button)
- void setListenerToWordButton(WordButton)
- void setVeryTopOfPhoneColor()
+ void exitImgButtonClick(View)
# void onStop()
# void onRestart()
}


class DividerView {
- int color
- int thickness
- int redPercentage
- Paint paint
- void init()
# void onDraw(Canvas)
+ void setRedPercentage(int)
+ void setThickness(int)
+ void setColor(int)
}


class SummerizeMultipleAnswersQuestionsPage {
- ArrayList<AfterAnswerQuestionDetails> afterAnswerQuestionDetails
# void onCreate(Bundle)
- void addViewIntoLinear(View,boolean)
- void createButton(boolean,AfterAnswerQuestionDetails)
- FinalWordProperties[] getWordProArr(AfterAnswerQuestionDetails[])
- void createButtons(AfterAnswerQuestionDetails[])
+ void exitImgButtonClick5(View)
}




Serializable <|.. FinalWordProperties
AppCompatButton <|-- WordButton
ProgressBar <|-- TextProgressBar
ScrollView <|-- LockableScrollView
AppCompatButton <|-- StatisticsButton
AppCompatActivity <|-- SeacrhWordInDbActivity
View <|-- DividerView
AppCompatActivity <|-- SummerizeMultipleAnswersQuestionsPage
@enduml